@startuml order
class Order {
  -long id
  -LocalDateTime deliveryDate
  -LocalDateTime orderDate
  -Customer customer
  -DeliveryMan deliveryMan
  -Map<Dish, Integer> dishesOrdered
  -OrderStatus status
  -PaymentMethod paymentMethod
  -boolean isPaid
  --
  +Order()
  +advanceStatus()
  +cancelOrder()
  +double getInvoiceTotalFee()
  ..
  getters and setters
}

enum OrderStatus {
    ACCEPTED("Accettato e in preparazione"),
    CANCELED("Annullato"),
    DELIVERED("Consegnato"),
    PENDING("In attesa di accettazione"), 
    TOCOLLECTPOINT("Il fattorino sta andando a ritirare il tuo ordine"),
    TODESTINATION("Il fattorino sta per consegnare il tuo ordine"),
    WAITING("Il fattorino è sul luogo di ritiro, in attesa che l'ordine sia pronto");
    -String displayValue
    --
    -OrderStatus(String displayValue)
    +Optional<OrderStatus> next()
    +String getDisplayValue()

}


enum PaymentMethod {
    CASH("Contanti alla consegna")
    CREDITCARD("Carta di credito")
    PAYPAL("PayPal")
    -String displayValue
    --
    -PaymentMethod(String displayValue)
    +String getDisplayValue()
}

OrderStatus *-- Order
PaymentMethod *-- Order
@enduml

